testdata/golden/sema/valid/module_no_std_multi/main.sg
pragma module, no_std;

pub fn run() -> int {
    return helper();
}
