testdata/golden/sema/invalid/directives/not_directive_module/helper/_helper.sg
// Helper module WITHOUT pragma directive
// This module should not be usable as directive namespace
pragma module::helper;

pub fn do_something() -> int { return 42; }
